syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/loomnetwork/go-loom/types/types.proto";

message PlasmachainEvent {
    uint64 eth_block = 1;
    oneof payload {
        PlasmachainGeneratedCard card = 2;
    }
}

message PlasmachainGeneratedCard {
    Address owner = 1;
    Address contract = 2;
    BigUInt card_id = 3 [(gogoproto.customname)="CardID"];
    BigUInt amount = 4;
}

message ProcessEventBatchRequest {
    repeated PlasmachainEvent events = 1;
    string card_version = 2;
}